Fix Operation Handle